# confetti

./: .gitignore  Dockerfile  PrivacyPolicy.md  README.md  package.json  pyproject.toml  renovate.json
.github/workflows/: forge_tests.yml
app/: main.py
app/api/v1/: __init__.py  routes.py
app/models/: __init__.py  schemas.py
app/service/: __init__.py  transformer.py
tests/integration/: test_api.py
tests/unit/: test_transformer.py
